# fitcheck

./: .env.example  .gitignore  README.md  TODOS.md  docker-compose.yml
.context/retros/: 2026-03-25-1.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: gemini.py  supabase_db.py  vector_db.py
backend/app/models/: __init__.py  application.py  crawler_job_status.py  job.py  match.py  resume.py
backend/app/routers/: applications.py  crawler_jobs.py  generate.py  jobs.py  match.py  resume.py
backend/app/schemas/: application.py  generate.py  job.py  match.py  resume.py
backend/app/services/: embedder.py  generator.py  matcher.py  parser.py  scraper.py
backend/app/ui/: __init__.py  applications_page.py  common.py  crawler_jobs_page.py  job_detail_page.py  jobs_page.py  match_detail_page.py  match_page.py  resume_page.py
backend/tests/: test_crawler_jobs.py
frontend/: package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/apps/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/match/: page.tsx
frontend/src/app/match/[id]/: page.tsx
frontend/src/app/resume/: page.tsx
frontend/src/components/kanban/: board.tsx  job-card.tsx  score-ring.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: skeleton.tsx
frontend/src/lib/: api.ts  types.ts
